--- a/tac-kbp-2017/pom.xml
+++ b/tac-kbp-2017/pom.xml
@@ -100,6 +100,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+
     </dependencies>
 
 
