--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <skipITs>true</skipITs>
 
         <junit.version>4.11</junit.version>
-        <bueopen.version>7.4.1-SNAPSHOT</bueopen.version>
+        <bueopen.version>7.6.0</bueopen.version>
         <jackson.version>2.7.5</jackson.version>
 
         <!-- Sonar server properties. These only work BBN-internally -->
