[maven-release-plugin] prepare release tac-kbp-eal-all-4.8.2

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.bbn.kbp.eal</groupId>
     <artifactId>tac-kbp-eal-all</artifactId>
-    <version>4.8.2-SNAPSHOT</version>
+    <version>4.8.2</version>
     <packaging>pom</packaging>
 
     <name>TAC KBP Event Argument and Linking Shared Task</name>
