--- a/tac-kbp-2017/pom.xml
+++ b/tac-kbp-2017/pom.xml
@@ -2,14 +2,14 @@
     <parent>
         <artifactId>tac-kbp-eal-all</artifactId>
         <groupId>com.bbn.kbp.eal</groupId>
-        <version>4.8.3-SNAPSHOT</version>
+        <version>4.8.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tac-kbp-2017</artifactId>
-    <version>4.8.3-SNAPSHOT</version>
+    <version>4.8.3</version>
     <packaging>jar</packaging>
 
     <name>Code for 2017 TAC KBP evaluation</name>
