--- a/tac-kbp-eal-scorer/pom.xml
+++ b/tac-kbp-eal-scorer/pom.xml
@@ -147,6 +147,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.bbn.bue</groupId>
+            <artifactId>gnuplot-util</artifactId>
+        </dependency>
     </dependencies>
 
 
