Separate 2017 eval process run on all languages from that run on separate languages

--- a/tac-kbp-eal/pom.xml
+++ b/tac-kbp-eal/pom.xml
@@ -28,6 +28,10 @@
                             <id>importForeignIDs</id>
                         </program>
                         <program>
+                            <mainClass>com.bbn.kbp.events2014.bin.SplitByLanguage</mainClass>
+                            <id>splitByLanguage</id>
+                        </program>
+                        <program>
                             <mainClass>com.bbn.nlp.corpora.ere.BuildRichEREDocIDToFileList
                             </mainClass>
                             <id>BuildRichEREDocIDToFileList</id>
