--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <skipITs>true</skipITs>
 
         <junit.version>4.11</junit.version>
-        <bueopen.version>7.6.3-SNAPSHOT</bueopen.version>
+        <bueopen.version>8.0.0</bueopen.version>
         <jackson.version>2.7.5</jackson.version>
 
         <!-- Sonar server properties. These only work BBN-internally -->
@@ -339,7 +339,7 @@
             <dependency>
                 <groupId>com.google.inject</groupId>
                 <artifactId>guice</artifactId>
-                <version>4.0</version>
+                <version>4.1.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
